# lint-lang

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  implementation-notes.html
.cargo/: config.toml
src/: bundled.rs  cli.rs  config.rs  discovery.rs  doctor.rs  download.rs  inference.rs  lint.rs  main.rs  models.rs  ollama.rs  prompt.rs  tui.rs  tui_model_list.rs
